kubernetes/apps/home/home-assistant/app/httproute-external.yaml
---
# External HTTPRoute for Home Assistant
# Protected by gateway-level Authentik forward-auth (default)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-external
  namespace: home
spec:
  hostnames:
    - hass.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: home-assistant-app
          port: 8123
---
# External HTTPRoute for Code Server
# Protected by gateway-level Authentik forward-auth (default)
## Disabling for now
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: code-server-external
#   namespace: home
# spec:
#   hostnames:
#     - hass-code.${SECRET_DOMAIN}
#   parentRefs:
#     - name: envoy-external
#       namespace: network
#       sectionName: https
#   rules:
#     - backendRefs:
#         - name: home-assistant-code-server
#           port: 8081
